fix(location page): form position on mobile

--- a/src/pages/Locate/locate.module.css
+++ b/src/pages/Locate/locate.module.css
@@ -1,21 +1,18 @@
 .root {
     position: relative;
     display: flex;
-    justify-content: start;
-    align-items: center;
-    flex-direction: column;
-    padding-top: 25%;
+    justify-content: center;
+    margin: 0;
+    padding: 0 var(--padding);
+    padding-top: 55%;
     width: 100%;
     height: 100%;
+    transition: var(--transition-time);
 }
 
-.logoContainer {
-    margin-bottom: 50px;
-    width: 100%;
-    height: 100px;
-    background-color: grey;
-}
-
-.container {
-    width: 100%;
+@media (height <= 700px) {
+    .root {
+        margin-top: -100px;
+        padding-top: 0;
+    }
 }
